fix contact page overflow

--- a/src/sections/Contact/styles.module.scss
+++ b/src/sections/Contact/styles.module.scss
@@ -17,9 +17,10 @@
 }
 
 .contact {
-    height: calc(100vh - 54px);
+    min-height: calc(100vh - 54px);
     background-color: #f3f4f3;
     width: 100%;
+    padding-bottom: 54px;
 
     .contactTitle {
         text-align: center;
